- fix issue on editor visibility

--- a/src/components/TracksEditor/style.css
+++ b/src/components/TracksEditor/style.css
@@ -3,7 +3,6 @@
     --lgs-journey-editor-offset: calc( var(--lgs-journey-editor-width) + var(--lgs-gutter-s));
 }
 #journeys-editor-container {
-    position: absolute;
     z-index: var(--lgs-ui-layer-zindex);
     left: 0;
     right: var(--right);
